# brainsales-companion

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: deepgram.rs  lib.rs  main.rs  server.rs
src-tauri/src/audio/: capture.rs
src/components/: AudioVisualizer.tsx
~/.tauri/: brainsales.key  brainsales.key.pub
